--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
-  "team_name": "DefaultTeam",
-  "spreadsheet_name": "Sudan-MM-Metadata",
-  "parent_folder_name": "Sudan-MM-Submission-DefaultTeam",
-  "service_account_file": "service_account_credentials.json"
+  "team_name": "Zamanna",
+  "spreadsheet_name": "Sudan-MM-Submission-Zamanna",
+  "parent_folder_name": "Sudan-MM-Submission-Zamanna",
+  "parent_folder_id": "",
+  "oauth_credentials_file": "oauth_credentials.json"
 }
