--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ google-auth>=2.23.0
 google-auth-oauthlib>=1.1.0
 google-auth-httplib2>=0.1.1
 moviepy>=1.0.3
+mutagen>=1.47.0
 pydub>=0.25.1
 pandas>=2.0.0
