--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ token.pickle
 __pycache__/
 *.py[cod]
 *$py.class
+*.pyc
 *.so
 .Python
 env/
@@ -30,6 +31,7 @@ wheels/
 
 # Streamlit
 .streamlit/
+.streamlit/secrets.toml
 
 # IDE
 .vscode/
