--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ google-auth>=2.23.0
 google-auth-oauthlib>=1.1.0
 google-auth-httplib2>=0.1.1
 mutagen>=1.47.0
+streamlit-audiorec>=0.1.3
 pandas>=2.0.0
